deploy/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hrms-app
  namespace: hrms
  labels:
    app: hrms-app
spec:
  type: ClusterIP
  selector:
    app: hrms-app
  ports:
    - name: http
      port: 8080
      targetPort: http
