deploy/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hrms-app
  namespace: hrms
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
spec:
  ingressClassName: nginx
  rules:
    - host: hrms.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hrms-app
                port:
                  name: http
